--- a/style.css
+++ b/style.css
@@ -69,6 +69,16 @@ header h1 {
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.cancel-btn {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
 .btn:hover {
